Tue Aug 17 21:59:04 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * templates/vc10.mpd:
        * templates/vc10filters.mpd:

          Updated with general cleanup and to better match the settings that
          VS2010 generates when creating a C++ project from the GUI.

        * templates/vc10dll.mpt:
        * templates/vc10exe.mpt:
        * templates/vc10lib.mpt:
        * templates/vc10libexe.mpt:
        * templates/vc10platforms.mpt:

          Use EnableIntrinsicFucntions and WholeProgramOptimization for
          Release configurations.  Also, don't disable GenerateDebugInformation
          as this is still used in Release configurations.

Mon Aug 16 19:45:17 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * modules/ProjectCreator.pm (need_to_write_project):

          Do not consider a resource file alone enough to create a project,
          it must have a source or custom-input file.  vc10 requires this
          because it creates resouce files in the intermediate directories,
          which would subsequently be found in an -implicit project search.

Tue Aug 10 21:40:07 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * docs/templates/vc10.txt:

          Added the "managed" variable.

        * modules/VC8WorkspaceCreator.pm:

          Projects references were picking up the .filters file for vc10 instead
          of the normal output file (.vcxproj).  For now this is just a
          work-around to remove ".filters" from the relative path to the
          referenced project.

        * templates/vc10.mpd:

          Allow the use of "managed" as a backwards-compatibility synonym for
          "CLRSupport".
          Re-order the nested <%foreach%> loops so that 'platforms' appears
          before 'configurations' (as it does in vc8.mpd).
          DebugInformationFormat is not supported with CLR/managed.
          FixedBaseAddress is not supported with CLR/managed.